--- a/.github/workflows/test_workflows.yml
+++ b/.github/workflows/test_workflows.yml
@@ -1,10 +1,16 @@
 name: Test workflows
 
 on:
-  workflow_dispatch:
   pull_request:
 
 jobs:
+  workflow-pr-bot:
+    permissions:
+      contents: write
+      pull-requests: write
+    uses: ./.github/workflows/pr_bot.yml
+    secrets: inherit
+
   workflow-pr-labeler:
     permissions:
       contents: read
