--- a/.github/workflows/pr_bot.yml
+++ b/.github/workflows/pr_bot.yml
@@ -19,7 +19,6 @@ permissions:
 
 jobs:
   pr-bot:
-    if: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name == github.repository }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -44,6 +43,7 @@ jobs:
         if: ${{ inputs.bump-script != '' && github.actor != 'dependabot[bot]' }}
         shell: bash
         env:
+          HEAD_REF: ${{ github.head_ref }}
           FROM_REF: ${{ steps.version.outputs.from-ref }}
           RESOLVED_VERSION: ${{ steps.version.outputs.resolved-version }}
           MAJOR_VERSION: ${{ steps.version.outputs.major-version }}
@@ -70,7 +70,7 @@ jobs:
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add -A
           git commit -m "chore: apply automated version bump"
-          git push origin "HEAD:${{ github.head_ref }}"
+          git push origin "HEAD:${HEAD_REF}"
 
       - name: Enable auto-merge for Dependabot PR
         if: ${{ github.actor == 'dependabot[bot]' && github.event.pull_request.draft == false }}
