--- a/.github/workflows/pr_labeler.yml
+++ b/.github/workflows/pr_labeler.yml
@@ -2,6 +2,10 @@ name: PR labeler
 on:
   workflow_call:
 
+concurrency:
+  group: "pr-labeler-${{ github.event.pull_request.number || github.ref }}"
+  cancel-in-progress: false
+
 jobs:
   pr-labeler:
     permissions:
