--- a/copier.yml
+++ b/copier.yml
@@ -7,6 +7,8 @@ _envops:
   block_start_string: "[%"
   block_end_string: "%]"
 
+_subdirectory: template
+
 _answers_file: .copier-answers.ci.yml
 
 bump_script_path:
