Add Copier answers template file for dynamic YAML generation

--- a/tests/fixtures/test-labeler.yml
+++ b/tests/fixtures/test-labeler.yml
@@ -1,5 +1,5 @@
 test-label:
   - changed-files:
-    - any-glob-to-any-file: [".github/**", ".vscode/**"]
+    - any-glob-to-any-file: ["**"]
   - description: "This is just a test"
   - color: "7c24a2"
