Add --defaults option to Copier update command in CI updater workflow

--- a/.github/workflows/ci_updater.yml
+++ b/.github/workflows/ci_updater.yml
@@ -90,7 +90,7 @@ jobs:
           fi
 
           echo "ran=true" >> "$GITHUB_OUTPUT"
-          copier update --trust -a "$ANSWERS_FILE" -A --vcs-ref "$TEMPLATE_REF"
+          copier update --trust -a "$ANSWERS_FILE" -A --vcs-ref "$TEMPLATE_REF" --defaults
 
       - name: Detect changes
         id: detect
