Add workflows permission to CI updater and CI update templates

--- a/.github/workflows/test_workflows.yml
+++ b/.github/workflows/test_workflows.yml
@@ -170,6 +170,7 @@ jobs:
     permissions:
       contents: write
       pull-requests: write
+      actions: write
     uses: ./.github/workflows/ci_updater.yml
     secrets: inherit
     with:
