--- a/.github/workflows/ci_updater.yml
+++ b/.github/workflows/ci_updater.yml
@@ -51,6 +51,7 @@ on:
 permissions:
   contents: write
   pull-requests: write
+  actions: write
 
 concurrency:
   group: ci-updater-${{ github.repository }}
