Enhance CI workflows with CI_BOT_TOKEN support and add init script for repository setup

--- a/.github/workflows/pr_automation.yml
+++ b/.github/workflows/pr_automation.yml
@@ -30,6 +30,7 @@ jobs:
         with:
           fetch-depth: 0
           fetch-tags: true
+          token: ${{ secrets.token || github.token }}
 
       - name: Run PR labeler
         uses: athackst/ci/actions/pr-labeler@main
