--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -28,6 +28,17 @@ jobs:
           HAS_AUTOMERGE="$(gh pr view "${{ github.event.pull_request.number }}" --repo "${{ github.repository }}" --json labels --jq 'any(.labels[]?; .name == "automerge")')"
           echo "has-automerge=$HAS_AUTOMERGE" >> "$GITHUB_OUTPUT"
 
+      - name: Debug gh auth identity
+        if: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name == github.repository }}
+        shell: bash
+        env:
+          GH_TOKEN: ${{ secrets.token || github.token }}
+          HAS_CALLER_TOKEN: ${{ secrets.token != '' }}
+        run: |
+          set -euo pipefail
+          echo "token-source=$([ "$HAS_CALLER_TOKEN" = "true" ] && echo caller-secret || echo github-token-fallback)"
+          echo "gh-viewer-login=$(gh api graphql -f query='query { viewer { login } }' --jq '.data.viewer.login')"
+
       - name: Enable auto-merge for labeled PR
         if: ${{ steps.automerge-label.outputs.has-automerge == 'true' && github.event.pull_request.draft == false }}
         shell: bash
