--- a/.github/workflows/test_actions.yml
+++ b/.github/workflows/test_actions.yml
@@ -243,6 +243,49 @@ jobs:
 
           exit "$BATS_STATUS"
 
+  actions-list-repos:
+    permissions:
+      contents: read
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v6
+
+      - name: Install bats
+        shell: bash
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y bats
+
+      - name: Test list-repos script (bats)
+        shell: bash
+        run: |
+          set +e
+          BATS_OUTPUT="$(bats tests/bats/list_repos.bats 2>&1)"
+          BATS_STATUS=$?
+          set -e
+          TEST_SUMMARY="list-repos action test"
+          if [ "$BATS_STATUS" -eq 0 ]; then
+            TEST_SUMMARY=":white_check_mark: $TEST_SUMMARY passed."
+          else
+            TEST_SUMMARY=":x: $TEST_SUMMARY failed."
+          fi
+
+          {
+            echo "### list-repos action test"
+            echo ""
+            echo "<details><summary>$TEST_SUMMARY</summary>"
+            echo ""
+            echo '```text'
+            echo "$BATS_OUTPUT"
+            echo '```'
+            echo ""
+            echo "</details>"
+            echo ""
+          } >> "$GITHUB_STEP_SUMMARY"
+
+          echo "$BATS_OUTPUT"
+          exit "$BATS_STATUS"
+
       - name: Test build docs
         id: mkdocs
         uses: athackst/mkdocs-simple-plugin@main
@@ -570,6 +613,7 @@ jobs:
     needs:
       - actions-unit-tests
       - actions-pr-labeler
+      - actions-list-repos
       - actions-mkdocs-config
       - actions-htmlproofer
       - actions-version-resolver
