--- a/.github/workflows/test_workflows.yml
+++ b/.github/workflows/test_workflows.yml
@@ -5,7 +5,7 @@ on:
 
 concurrency:
   group: "test-workflows-${{ github.event.pull_request.number || github.ref }}"
-  cancel-in-progress: false
+  cancel-in-progress: true
 
 jobs:
   workflow-lint:
