--- a/.github/workflows/test_templates.yml
+++ b/.github/workflows/test_templates.yml
@@ -7,6 +7,11 @@ on:
 permissions:
   contents: read
 
+concurrency:
+  group: "test-templates-${{ github.event.pull_request.number || github.ref }}"
+  cancel-in-progress: true
+
+
 jobs:
   test-copier:
     permissions:
