--- a/.github/workflows/test_actions.yml
+++ b/.github/workflows/test_actions.yml
@@ -8,6 +8,10 @@ permissions:
   contents: read
   pull-requests: write
 
+concurrency:
+  group: "test-actions-${{ github.event.pull_request.number || github.ref }}"
+  cancel-in-progress: true
+
 jobs:
   actions-unit-tests:
     permissions:
